ncc/testsuite/negative/tyenf.n
using Nemerle.IO;

class A {}
class B : A {}

class M {
  static g (b : B) : A { (b : A) }        // OK
  static f () : int { ("foo" : int) }    // E: type-enforced expression was expected to have type.*
}

module M1 {
  f () : void {
    def f1 (x) { printf ("%s\n", x) };
    f1 (3); // E: call
    printf ("%d", f1 ("foo")); // E: type-enforced expression was expected to have type int while it has void

    _ = null : System.Int32; // E: cannot convert from null value to `int' in type-enforced expression
    _ = $ "$(foo"; // E: runaway .* in format string
    _ = $ "$(foo +)"; // E: operator
    _ = $ ""; // OK
    _ = $ "$()"; // OK
  }
}
